feat: Implement JWT authentication and authorization with custom claims

--- a/src/BackEnd/academia-devexpert.API/appsettings.json
+++ b/src/BackEnd/academia-devexpert.API/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=DbAcademiaDevExpert;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "AppSettings": {
+    "Secret": "MEU-SEGREDO-SUPER-SECRETO-256bit",
+    "ExpiracaoHoras": 2,
+    "Emissor": "academia-devexpert",
+    "ValidoEm": "https://localhost"
   }
 }
