feat: Refactor identity configuration and database selection for development and production environments
- Updated IdentityConfigs to use WebApplicationBuilder for service registration.
- Added DatabaseSelectorExtension to manage database context based on environment.
- Introduced DbMigrationHelpers for database migration and seeding.
- Removed obsolete migration files and updated .gitignore for local database files.
- Updated appsettings for development and production environments with appropriate connection strings and app settings.
- Adjusted Program.cs to integrate new configurations and middleware.
- Updated project files to include necessary package references for SQLite and Entity Framework.

--- a/src/BackEnd/academia-devexpert.API/appsettings.Development.json
+++ b/src/BackEnd/academia-devexpert.API/appsettings.Development.json
@@ -6,6 +6,12 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=DbAcademiaDevExpert;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=AcademiaDevExpert.db"
+  },
+  "AppSettings": {
+    "Secret": "MEU-SEGREDO-SUPER-SECRETO-256bit-DEV",
+    "ExpiracaoHoras": 2,
+    "Emissor": "academia-devexpert",
+    "ValidoEm": "https://localhost"
   }
 }
