--- a/src/BackEnd/academia-devexpert.API/appsettings.Production.json
+++ b/src/BackEnd/academia-devexpert.API/appsettings.Production.json
@@ -5,12 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=DbAcademiaDevExpert;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "AppSettings": {
-    "Secret": "MEU-SEGREDO-SUPER-SECRETO-256bit",
+    "Secret": "MEU-SEGREDO-SUPER-SECRETO-256bit-PRD",
     "ExpiracaoHoras": 2,
     "Emissor": "academia-devexpert",
     "ValidoEm": "https://localhost"
